python_scripts/logs/XGBoost_Randomforest_test_7.log
nohup: ignoring input
  File "/home/cat/descriptors/python_scripts/descriptor_models.py", line 224
    param_distributions = { n_estimators=500,        ## number of trees
                            ^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Maybe you meant '==' or ':=' instead of '='?
